Adjust code spacing to avoid vertical scrollbars

--- a/src/assets/stylesheets/main/_typeset.scss
+++ b/src/assets/stylesheets/main/_typeset.scss
@@ -234,7 +234,7 @@ kbd {
     > code {
       display: block;
       margin: 0;
-      padding: px2em(10.5px, 13.6px) px2em(16px, 13.6px);
+      padding: px2em(8px, 13.6px) px2em(13px, 13.6px);
       overflow: auto;
       word-break: normal;
       box-shadow: none;
